<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_stick_figure_black_24dp"
        android:title="Profiles" />
    <item
        android:id="@+id/nav_notification_admin"
        android:icon="@drawable/ic_notification_black_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/nav_image"
        android:icon="@drawable/ic_gallery_black_24dp"
        android:title="Image" />
</menu>